fixing some spacings

--- a/src/ArticleDrawer.css
+++ b/src/ArticleDrawer.css
@@ -16,5 +16,10 @@
   color: #222;
   font-weight: bold;
   text-align: left;
-  margin: 8px 16px;
+  margin-bottom: 8px;
+}
+.DrawerItem {
+  text-align: left;
+  text-decoration: underline;
+  margin-top: 1rem;
 }
